--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,9 @@ address {
   display: block;
   font-style: italic;
 }
+input {
+  font-family: inherit;
+}
 /* ========= top line ========= */
 
 .top-line {
@@ -497,4 +500,73 @@ address {
 .footer-second-link:hover,
 .footer-second-link:focus {
   background-color: #31d0aa;
+}
+
+.footer-second {
+  margin-right: 80px;
+}
+/* third footer*/
+
+.footer-third {
+  display: flex;
+  flex-direction: column;
+}
+.footer-third-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
+}
+.footer-form {
+  display: flex;
+  gap: 24px;
+}
+.footer-form-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  background-color: #4d5ae5;
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  min-width: 165px;
+  height: 40px;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-form-btn:hover,
+.footer-form-btn:focus {
+  background-color: #404bbf;
+}
+
+.form-label {
+  display: flex;
+}
+.form-input {
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  border: 1px solid #fff;
+  border-radius: 4px;
+  width: 264px;
+  height: 40px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background-color: transparent;
+  padding-left: 16px;
+}
+.form-input::placeholder {
+  color: #ffffff;
+}
+.icon-footer-third {
+  fill: #ffffff;
+  margin-left: 16px;
 }
