--- a/css/styles.css
+++ b/css/styles.css
@@ -604,10 +604,14 @@ input {
   padding-right: 24px;
   padding-bottom: 24px;
   visibility: visible;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+    0 2px 1px 0 rgba(0, 0, 0, 0.2);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-icon-close-btn {
   justify-content: center;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn {
@@ -629,8 +633,11 @@ input {
   cursor: pointer;
 }
 
-.modal-close-btn:active {
-  fill: white;
+.modal-close-btn:active,
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+  border: none;
+  fill: #ffffff;
   background-color: #404bbf;
 }
 
@@ -645,7 +652,7 @@ input {
 }
 
 .review-form-wrapper {
-  margin-bottom: 8px;
+  margin-bottom: 16px;
 }
 .review-form-input {
   border: 1px solid rgba(46, 47, 66, 0.4);
@@ -654,7 +661,9 @@ input {
   height: 40px;
   background-color: transparent;
   padding-left: 38px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: transparent;
 }
 
 .review-form-input:focus {
@@ -668,11 +677,11 @@ input {
 
 .review-form-name-label {
   font-size: 12px;
-  line-height: 1.16667;
   letter-spacing: 0.04em;
   color: #8e8f99;
   display: block;
   margin-bottom: 4px;
+  line-height: 1.17;
 }
 
 .review-form-input-wrapper {
@@ -700,6 +709,7 @@ input {
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: #2e2f42;
+  outline: transparent;
 }
 
 .review-form-taxtarea::placeholder {
@@ -734,10 +744,14 @@ input {
   cursor: pointer;
   fill: transparent;
   margin-right: 8px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-checkbox:checked + .checkbox-label .review-checkbox {
   background-color: #404bbf;
-  fill: #ffffff;
+  fill: #f4f4fd;
+  border: none;
 }
 .form-checkbox:focus + .checkbox-label .review-checkbox {
   outline: 2px solid #404bbf;
@@ -757,6 +771,7 @@ input {
   height: 56px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background-color: #4d5ae5;
+  font-family: 'Roboto', sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
