--- a/css/styles.css
+++ b/css/styles.css
@@ -652,7 +652,7 @@ input {
 }
 
 .review-form-wrapper {
-  margin-bottom: 16px;
+  margin-bottom: 8px;
 }
 .review-form-input {
   border: 1px solid rgba(46, 47, 66, 0.4);
@@ -661,8 +661,7 @@ input {
   height: 40px;
   background-color: transparent;
   padding-left: 38px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   outline: transparent;
 }
 
@@ -708,8 +707,8 @@ input {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
-  color: #2e2f42;
   outline: transparent;
+  color: rgba(46, 47, 66, 0.4);
 }
 
 .review-form-taxtarea::placeholder {
