--- a/css/styles.css
+++ b/css/styles.css
@@ -654,6 +654,9 @@ input {
 .review-form-wrapper {
   margin-bottom: 8px;
 }
+.review-form-wrapper-comment {
+  margin-bottom: 16px;
+}
 .review-form-input {
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
@@ -719,7 +722,8 @@ input {
   outline: transparent;
 }
 
-.checkbox-label {
+.label-checkbox {
+  font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
@@ -733,6 +737,7 @@ input {
 }
 
 .review-checkbox {
+  margin-bottom: 8px;
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -742,7 +747,6 @@ input {
   height: 16px;
   cursor: pointer;
   fill: transparent;
-  margin-right: 8px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
