--- a/css/styles.css
+++ b/css/styles.css
@@ -722,7 +722,7 @@ input {
   outline: transparent;
 }
 
-.label-checkbox {
+.checkbox {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
