--- a/css/styles.css
+++ b/css/styles.css
@@ -723,7 +723,7 @@ input {
 }
 
 .review-form-chackbox-wrapper {
-  margin-bottom: 23px;
+  margin-bottom: 24px;
 }
 
 .review-form-chackbox-label {
@@ -750,13 +750,17 @@ input {
   cursor: pointer;
   fill: transparent;
   margin-right: 8px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .review-form-privacy-chackbox:checked
   + .review-form-chackbox-label
   .review-form-own-chackbox {
   background-color: #404bbf;
-  fill: #ffffff;
+  fill: #f4f4fd;
+  border: none;
 }
 
 .review-form-privacy-chackbox:focus
